--- a/cbor.opam
+++ b/cbor.opam
@@ -11,7 +11,7 @@ depends: [
   "dune"
   "base-bytes"
   "ocplib-endian" {>= "0.6"}
-  "yojson" {with-test}
+  "yojson" {with-test & >= "1.6" }
 ]
 synopsis: "CBOR encoder/decoder (RFC 7049) - native OCaml implementation"
 description: """
