--- a/cbor.opam
+++ b/cbor.opam
@@ -1,14 +1,14 @@
 opam-version: "2.0"
 maintainer: "ygrek@autistici.org"
 authors: "ygrek"
-tags: "org:ygrek"
 homepage: "https://github.com/ygrek/ocaml-cbor"
-dev-repo: "git://github.com/ygrek/ocaml-cbor.git"
 bug-reports: "https://github.com/ygrek/ocaml-cbor/issues"
+dev-repo: "git://github.com/ygrek/ocaml-cbor.git"
+tags: "org:ygrek"
 build: ["dune" "build" "-p" name "-j" jobs]
 depends: [
   "ocaml" {>= "4.00.0"}
-  "dune"
+  "dune" {>= "1.1"}
   "base-bytes"
   "ocplib-endian" {>= "0.6"}
   "yojson" {with-test & >= "1.6" }
